--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paraboly/pwc-sliding-panel",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "A panel that slides open from the sides of the page when you click a handle.",
   "keywords": [
     "paraboly",
@@ -32,14 +32,29 @@
   "scripts": {
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "test": "stencil test --spec --e2e --passWithNoTests",
+    "test.watch": "stencil test --spec --e2e --watchAll --passWithNoTests",
+    "generate": "stencil generate",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\" \"src/**/*.jsx\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "devDependencies": {
-    "@stencil/core": "^1.3.3"
+    "@stencil/core": "^1.8.5",
+    "@stencil/router": "^1.0.1",
+    "@stencil/sass": "^1.1.1",
+    "@types/jest": "24.0.25",
+    "@types/puppeteer": "1.20.3",
+    "jest": "24.9.0",
+    "jest-cli": "24.9.0",
+    "prettier": "^1.19.1",
+    "puppeteer": "1.20.0",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0"
   },
-  "dependencies": {
-    "@stencil/sass": "^1.1.1"
-  }
+  "dependencies": {}
 }
