simplified everything and split content and toggle into sub-components

--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "generate": "stencil generate",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\" \"src/**/*.jsx\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "prepare": "npm run finalize",
+    "prepublishOnly": "npm test",
+    "preversion": "npm run finalize",
+    "version": "git add -A src",
     "postversion": "git push && git push --tags",
     "finalize": "npm run lint && npm run build && npm run format",
     "clean": "rm -Rf .stencil/ && rm -Rf dist/ && rm -Rf loader/ && rm -Rf node_modules/ && rm -Rf www/ && rm -f ./package-lock.json && npm cache clean -f",
